--- a/views/admin/adsanpham/create.ejs
+++ b/views/admin/adsanpham/create.ejs
@@ -52,7 +52,9 @@
                                                     <% } %>
                                             </select><br>
                                             <input type="submit" name="themsanpham" value="Thêm sản phẩm"
-                                                class="btn btn-primary">
+                                                class="btn btn-primary"><br/>
+                                            <br/>
+                                            <a href="admin/sanpham">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
