--- a/views/admin/partials/adminleft.ejs
+++ b/views/admin/partials/adminleft.ejs
@@ -5,7 +5,7 @@
         <div class="leftside-navigation">
             <ul class="sidebar-menu" id="nav-accordion">
                 <li>
-                    <a class="active" href="">
+                    <a class="active" href="admin">
                         <i class="fa fa-dashboard"></i>
                         <span>Tổng quan</span>
                     </a>
@@ -40,6 +40,17 @@
                     </a>
                     <ul class="sub">
 						<li><a href="/admin/khachhang">Khách hàng</a></li>
+						
+                    </ul>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-book"></i>
+                        <span>Quản lý tin tức</span>
+                    </a>
+                    <ul class="sub">
+						<li><a href="/admin/tintuc">Tin tức</a></li>
 						
                     </ul>
                 </li>
