--- a/views/client/timkiem/timkiem.ejs
+++ b/views/client/timkiem/timkiem.ejs
@@ -9,14 +9,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 style="margin-left:20px; margin-top:30px">Kết quả tìm kiếm: <?php echo mysqli_num_rows($result) ?> Sản phẩm</h3>
+                            <h3 style="margin-left:20px; margin-top:30px">Kết quả tìm kiếm:  Sản phẩm</h3>
                             <div class="product-wrapper-container">
-                                <?php while ($row = mysqli_fetch_assoc($result)) {
-                                    include 'Timkiemtn.php';
-                                } ?>
-                                <div class="product-wrapper-container"></div>
                         
-                                <?php } ?>
                             </div>
                         </div>
                     </div>
