chuc nang tim kiem

--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -45,9 +45,9 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
                     <div class="header-search">
-                        <form action="#">
-                            <input type="text" placeholder="Nhập từ khóa cần tìm ..."/>
-                            <a href="#"><i class="fa fa-search"></i></a>
+                        <form action="/timkiem" method="get" id="formsearch">
+                            <input type="text" name="search" placeholder="Nhập từ khóa cần tìm ..."/>
+                            <a onclick="onSubmitSearch()"><i class="fa fa-search"></i></a>
                         </form>
                     </div>
                 </div>
@@ -116,6 +116,11 @@
             </div>
         </div>
     </div>
+    <script>
+        function onSubmitSearch(){
+            $('#formsearch').submit();
+        }
+    </script>
     <!-- main-menu-area-end -->
 </header>
 <!-- header-area-end -->
