--- a/views/client/timkiem/timkiem.ejs
+++ b/views/client/timkiem/timkiem.ejs
@@ -9,9 +9,69 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 style="margin-left:20px; margin-top:30px">Kết quả tìm kiếm:  Sản phẩm</h3>
-                            <div class="product-wrapper-container">
-                        
+                            <h3 style="margin-left:20px; margin-top:30px">Kết quả tìm kiếm: <%= search.length %> Sản phẩm</h3>
+                                <div style="display:flex; flex-wrap: wrap;">
+                                    <% search.forEach(function(sp){ %>
+                                        <div class="product-wrapper-container" style= "width:20%; height:20%;">
+                                            <div class="product-wrapper">
+                                                <div class="product-img">
+                                                    <a href="/chitietsp?id=<%= sp.masp %>">
+                                                        <img src="client/img/product/<%= sp.hinhanh %>" alt="book"
+                                                            class="primary" style= "width:80%; height:80%;" />
+                                                    </a>
+                                                    <div class="quick-view">
+                                                        <a class="action-view" href="#" data-target="#productModal"
+                                                            data-toggle="modal" title="Quick View">
+                                                            <i class="fa fa-search-plus"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div class="product-flag">
+                                                        <ul>
+                                                            <li><span class="sale">new</span> <br></li>
+                                                            <li><span class="discount-percentage">-5%</span></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="product-details text-center">
+                                                    <div class="product-rating">
+                                                        <ul>
+                                                            <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                                            <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                                            <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                                            <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                                            <li><a href="#"><i class="fa fa-star"></i></a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <h4><a href="/chitietsp?id=<%= sp.masp %>">
+                                                            <%= sp.tensp%>
+                                                        </a></h4>
+                                                    <div class="product-price">
+                                                        <ul>
+                                                            <li>
+                                                                <%= sp.giatien %>
+                                                            </li>
+                                                            <li class="old-price">40.00</li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="product-link">
+                                                    <div class="product-button">
+                                                        <a href="/giohang?id=<%= sp.masp %>" title="Add to cart"><i
+                                                                class="fa fa-shopping-cart"></i>Add
+                                                            to cart</a>
+                                                    </div>
+                                                    <div class="add-to-link">
+                                                        <ul>
+                                                            <li><a href="product-details.html" title="Details"><i
+                                                                        class="fa fa-external-link"></i></a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    <% }) %>
+                                </div>
+                               
                             </div>
                         </div>
                     </div>
