--- a/views/client/chitietsp/chitietsp.ejs
+++ b/views/client/chitietsp/chitietsp.ejs
@@ -111,7 +111,7 @@
                             <div class="col-md-12">
                                 <div id="fb-root"></div>
                                 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v11.0&appId=333424968148234&autoLogAppEvents=1" nonce="oxOi1s2e"></script>
-                                <div class="fb-comments" data-href="https://donghothoitrang.herokuapp.com/chitietsp/" data-width="100%" data-numposts="10"></div>
+                                <div class="fb-comments" data-href="https://donghothoitrang.herokuapp.com/chitietsp?id=<%= indexct[0].masp %>" data-width="100%" data-numposts="10"></div>
                             </div>
                         </div>
                     </div>
