--- a/views/admin/addonhang/donhang.ejs
+++ b/views/admin/addonhang/donhang.ejs
@@ -13,7 +13,7 @@
                                 <h4>Danh sách đơn hàng</h4><br>
                                 <table class="table table-bordered">
                                     <tr>
-                                        <!-- <th>Thứ tự</th> -->
+                                        
                                         <th>Mã đơn hàng</th>
                                         <th>Tên người nhận</th>
                                         <th>Số điện thoại</th>
@@ -33,13 +33,13 @@
                                         <td><%= dh.diachinguoinhan %></td>
                                         <td><%= dh.tonghoadon %></td>
                                         <td><%= dh.ghichu %></td>
-                                        <td><%= dh.phuongthucthanhtoan %></td>
-                                        <td><%= dh.trangthai ==1 ? 'Đã xử lý': 'Chưa xử lý' %></td>
+                                        <td><%= dh.phuongthucthanhtoan == 1 ? 'Đã thanh toán': 'Chưa thanh toán' %></td>
+                                        <td><%= dh.trangthai ==1 ? 'Đã xử lý' : 'Chưa xử lý' %></td>
                                         <td><%= dh.tgtao %></td>
                                         
                                         <td><a id="linkShowTransaction" onclick="getOrderByOrderId('<%= dh.mahd %>')" class="btn btn-success">Xem giao dịch </a>
                                             <a href="/admin/donhang/updateOrder?id=<%= dh.mahd %>" class="btn btn-primary">Cập nhật</a>
-                                            <a href="admin/donhang/deleteOrder?id=<%= dh.mahd %>&status=<%= dh.trangthai %>" class="btn btn-danger">Xóa</a> </td>
+                                            <a href="/admin/donhang/deleteOrder?id=<%= dh.mahd %>&status=<%= dh.trangthai %>" class="btn btn-danger">Xóa</a> </td>
                                     </tr>
                                     <% }); %>
 
