--- a/views/admin/adlogin/login.ejs
+++ b/views/admin/adlogin/login.ejs
@@ -6,7 +6,7 @@
 <div class="w3layouts-main">
 	<h2>Sign In Now</h2>
 		<form action="/admin/login" method="post">
-			<input type="username" class="ggg" name="username" placeholder="USERNAME" required="">
+			<input type="text" class="ggg" name="username" placeholder="USERNAME OR EMAIL" required="">
 			<input type="password" class="ggg" name="password" placeholder="PASSWORD" required="">
 			<span><input type="checkbox" />Remember Me</span>
 			<h6><a href="#">Forgot Password?</a></h6>
