--- a/views/admin/partials/adminleft.ejs
+++ b/views/admin/partials/adminleft.ejs
@@ -54,6 +54,28 @@
 						
                     </ul>
                 </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-book"></i>
+                        <span>Quản lý nhân viên</span>
+                    </a>
+                    <ul class="sub">
+						<li><a href="/admin/nhanvien">Nhân viên</a></li>
+						
+                    </ul>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-book"></i>
+                        <span>Đăng xuất</span>
+                    </a>
+                    <ul class="sub">
+						<li><a href="/admin/login/logout">Đăng xuất</a></li>
+						
+                    </ul>
+                </li>
             </ul>           
          </div>
         <!-- sidebar menu end-->
