--- a/views/client/donghonu/donghonu.ejs
+++ b/views/client/donghonu/donghonu.ejs
@@ -35,7 +35,7 @@
                                                                 <ul>
                                                                     <li class="active"><a href="#th"
                                                                             data-toggle="tab"><i
-                                                                                class="fa fa-th-large"></i>Grid</a></li>
+                                                                                class="fa fa-th-large"></i>SẢN PHẨM</a></li>
                                                                     <li><a href="#list" data-toggle="tab"><i
                                                                                 class="fa fa-bars"></i></a></li>
                                                                 </ul>
