--- a/views/client/home/index.ejs
+++ b/views/client/home/index.ejs
@@ -274,10 +274,10 @@
                         <div class="row">
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                                 <div class="bestseller-content">
-                                    <h1>TOP INTERESTING</h1>
+                                    <h1>QUAN TÂM HÀNG ĐẦU</h1>
                                     <h2>Drew <br />Sirtors</h2>
-                                    <p class="categories">CATEGORIES: <a href="#">MEN'S WATCHES</a><br><a
-                                            href="#">WOMEN'S WATCHES</a></p>
+                                    <p class="categories">DANH MỤC: <a href="/donghonam">ĐỒNG HỒ NAM</a><br><a
+                                            href="/donghonu">ĐỒNG HỒ NỮ</a></p>
                                     <p>
                                         Đồng hồ được đặt tên như một lời nhắc nhở - nếu bạn không quan sát cẩn thận những gì bạn làm với thời gian của mình, nó sẽ trôi tuột khỏi bạn.</p>
                                     <div class="social-author">
@@ -350,7 +350,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="section-title bt text-center pt-100 mb-30 section-title-res">
-                                    <h2>WATCHES FEATURED</h2>
+                                    <h2>ĐỒNG HỒ NỔI BẬT</h2>
                                 </div>
                             </div>
                         </div>
@@ -464,7 +464,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="section-title text-center mb-30 section-title-res">
-                                    <h2>Latest from our blog</h2>
+                                    <h2>Mới nhất từ tin tức của chúng tôi</h2>
                                 </div>
                             </div>
                             <div class="post-active owl-carousel text-center">
@@ -473,10 +473,10 @@
                                     <div class="single-post">
                                         <div class="post-img">
                                             <a href="/chitietsp?id=<%= sp.masp %>"><img src="client/img/product/<%= sp.hinhanh %>" alt="post" style="width: 360px; height:436px;"/></a>
-                                            <div class="blog-date-time">
+                                            <!-- <div class="blog-date-time">
                                                 <span class="day-time">01</span>
                                                 <span class="moth-time">Dec</span>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <div class="post-content">
                                             <h3><a href="/chitietsp?id=<%= sp.masp %>">ĐỒNG HỒ NAM TISSOT</a></h3>
