--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -53,14 +53,16 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
                     <div class="logo-area text-center logo-xs-mrg">
-                        <a href="index.html"><img src="client/img/logo/logo1.png" alt="logo" /></a>
+                        <a href="/"><img src="client/img/logo/logo1.png" alt="logo" /></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="my-cart">
                         <ul>
                             <li><a href="#"><i class="fa fa-shopping-cart"></i>Giỏ hàng</a>
-                                <span>2</span>
+                                <% if(giohangs.length != 0) { %>
+                                    <span><%= giohangs.length %></span>
+                                <% }%>
                                 <div class="mini-cart-sub">
                                     <div class="cart-product">
                                         <% giohangs.forEach(function(sp){ %>
